add stylus and bundle files

--- a/public/index.html
+++ b/public/index.html
@@ -3,8 +3,9 @@
 <head>
   <meta charset="UTF-8">
   <title>Document</title>
+  <script src="./build/bundle.js"></script>
 </head>
 <body>
-  TESTING FOR EXPRESS APP
+  Testing from index.html
 </body>
 </html>
