add go script to start webpack and server

--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,6 @@
   <script src="./build/bundle.js"></script>
 </head>
 <body>
-  Testing from index.html
+  Testing from index.html!
 </body>
 </html>
